<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical" />
        </LinearLayout>


        <ImageView
            android:id="@+id/imglogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/tvtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imglogo"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"
            android:padding="5dp"
            android:text="@string/text_nginepyuk"
            android:textColor="@color/colorTextWhite"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvtext"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/username"
                        android:textColor="@color/colorText"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        style="@style/styleEditText"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/edit_text_style"
                        android:hint="@string/input_username"
                        android:paddingLeft="20dp"

                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/password"
                        android:textColor="@color/colorText"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        style="@style/styleEditText"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:hint="@string/input_password" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnLogin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/round_btn"
                            android:text="@string/text_login"
                            android:textColor="@color/colorTextWhite" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="153dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="220dp"
                        android:text="Belum punya akun ?"
                        android:layout_marginLeft="220dp" />

                    <Button
                        android:layout_width="163dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="200dp"
                        android:background="@drawable/round_btn"
                        android:layout_marginBottom="10dp"
                        android:text="@string/text_register"
                        android:textColor="@color/colorTextWhite"
                        android:layout_marginLeft="200dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>